--- a/ITIX.Test/packages.config
+++ b/ITIX.Test/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net461" />
 </packages>
