--- a/ITIX.Test/app.config
+++ b/ITIX.Test/app.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ITIX" connectionString="server=localhost;port=3306;database=itixsolutiondb;uid=root;password=123456" providerName="MySql.Data.MySqlClient" />
+    <add name="ITIX" connectionString="server=localhost;port=3306;database=itixsolutiontestdb;uid=root;password=123456" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
