--- a/ITIX.Test/packages.config
+++ b/ITIX.Test/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net461" />
+  <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
 </packages>
