--- a/ITIX.ViewForm/ITIX.ViewForm.csproj
+++ b/ITIX.ViewForm/ITIX.ViewForm.csproj
@@ -44,6 +44,9 @@
     <Reference Include="MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.Entity.6.9.12\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -88,6 +91,8 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ninject\ApplicationModule.cs" />
+    <Compile Include="Ninject\CompositionRoot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendasPedidosVendaDetalhesUI.cs">
@@ -154,13 +159,13 @@
       <Project>{d01472a3-290b-439e-9718-e1ec99421067}</Project>
       <Name>ITIX.Application</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ITIX.Core\ITIX.Core.csproj">
+    <ProjectReference Include="..\ITIX.Core\ITIX.Domain.csproj">
       <Project>{e22eab0d-37d5-4a67-8d7b-38c53f7c2aab}</Project>
-      <Name>ITIX.Core</Name>
+      <Name>ITIX.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ITIX.EntityFramework\ITIX.EntityFramework.csproj">
+    <ProjectReference Include="..\ITIX.EntityFramework\ITIX.Persistence.csproj">
       <Project>{89bd71c5-86d7-471f-8745-6080407d7026}</Project>
-      <Name>ITIX.EntityFramework</Name>
+      <Name>ITIX.Persistence</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
