--- a/ITIX.ViewForm/packages.config
+++ b/ITIX.ViewForm/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net461" />
+  <package id="Ninject" version="3.3.4" targetFramework="net461" />
 </packages>
