--- a/ITIX.ViewForm/ITIX.ViewForm.csproj
+++ b/ITIX.ViewForm/ITIX.ViewForm.csproj
@@ -168,8 +168,6 @@
       <Name>ITIX.Persistence</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Base\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
